--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -202,8 +202,7 @@
 
 // comment input form
 .comments{
-    display: flex;
-    flex-direction: column;
+    @include flex-column;
 
     &__title{
         @include page-header;
@@ -212,16 +211,13 @@
     }
     &__form{
         align-items: center;
-        margin-top: -4.375rem;
+        margin: -4.375rem 0.625rem 0 2.5rem;
         @include body;
-        margin-left: 2.5rem;
-        margin-right: .625rem;
     }
     &__name-label, &__comment-label{
         color: $sliver;
-        margin-bottom: .3125rem;
+        margin: 0 0 0.3125rem 3.125rem;
         align-self: flex-start;
-        margin-left: 3.125rem;
     }
     &__name-input, &__comment-input{
         align-items: flex-start;
@@ -232,41 +228,40 @@
         width: 85%;
         min-height: 3rem;
         padding: .75rem;
-        margin-bottom: 1.25rem;
-        margin-left: 3.125rem;
+        margin: 0 0 1.25rem 3.125rem;
         box-sizing: border-box;
+        transition: background-color  0.3s ease;
+
+        &::placeholder{
+            @include body;
+        }
+        &:not(:placeholder-shown) {
+            @include body;
+            color: $bandSite-black;
+        }
+        &:focus {
+            border-color: $bandSite-darkBlack;
+            @include body;
+            outline: none; 
+        }
+        &.error {
+            border-color: red;
+        }
+
     }
     &__comment-input{
         height: 6.25rem;
-        padding-bottom: 60px;
+        padding-bottom: 3.75rem;
         overflow: auto;
         resize: none;
         white-space: pre-wrap;
         word-wrap: break-word;
     }
-    &__name-input::placeholder, &__comment-input::placeholder{
-        @include body;
-    }
-    &__name-input:focus, &__comment-input:focus {
-        border-color: $bandSite-darkBlack;
-        @include body;
-        outline: none; 
-    }
-    &__name-input,&__comment-input {
-        &:not(:placeholder-shown) {
-            @include body;
-            color: $bandSite-black;
-        }
-    }
-    &__name-input.error, &__comment-input.error {
-        border-color: red;
-    }
     &__img{
         width: 2.4rem;
         height: 2.4rem;
         border-radius: 50%;
-        margin-left: 2.7rem;
-        margin-bottom: .625rem;
+        margin: 0 0 0.625rem 2.7rem;
     }
     &__btn {
         @include subheader;
@@ -276,8 +271,7 @@
         background-color: $bandSite-black;
         color: $white;
         border: none;
-        margin-bottom: 1.25rem;
-        margin-left: 3.125rem;
+        margin: 0 0 1.25rem 3.125rem;
     }
     @include tablet{
 
@@ -287,24 +281,17 @@
         }
         &__form{
             align-items: center;
-            margin-top: -4.375rem;
+            margin: -4.375rem 0.625rem 0 5rem;
             @include body;
-            margin-left: 5rem;
-            margin-right: .625rem;
         }
         &__name-label, &__comment-label{
             color: $sliver;
-            margin-bottom: .3125rem;
+            margin: 0 0 0.3125rem 6.25rem;
             align-self: flex-start;
-            margin-left: 6.25rem;
         }
         &__name-input, &__comment-input{
-            align-items: flex-start;
             width: 80%;
-            min-height: 3rem;
-            padding: .75rem;
-            margin-bottom: 20px;
-            margin-left: 6.25rem;
+            margin: 0 0 1.25rem 6.25rem;
         }
         &__comment-input{
             height: 6.25rem;
@@ -313,20 +300,12 @@
             width: 3.75rem;
             height: 3.75rem;
             border-radius: 50%;
-            margin-left: 6.5rem;
-            margin-bottom: -0.625rem;
+            margin: 0 0 -0.625rem 6.5rem;
         }
         &__btn {
             @include body;
-            height: 2.5rem;
             width: 20%;
-            border-radius: .25rem;
-            background-color: $bandSite-black;
-            color: $white;
-            border: none;
-            margin-bottom: 1.25rem;
-            margin-left: 35rem;
-    
+            margin: 0 0 1.25rem 35rem;
         }
     }
     @include desktop{
@@ -347,9 +326,6 @@
         }
         &__name-input, &__comment-input{
             width: 30%;
-            align-self: flex-start;
-            min-height: 3rem;
-            padding: .75rem;
             margin-bottom: 1.25rem;
         }
         &__name-input{
@@ -369,9 +345,7 @@
             @include body;
             height: 2.5rem;
             width: 12%;
-            margin-bottom: 1.25rem;
-            margin-left: 38.5rem;
-    
+            margin: 0 0 1.25rem 38.5rem;
         }
     }
 }
@@ -382,28 +356,26 @@
 .comment-list{
     list-style-type: none;
     padding: 0;
-    margin-bottom: 20px;
+    margin-bottom: 1.25rem;
 
     &__item{
         position: relative;
-        display: flex;
-        flex-direction: column;
+        @include flex-column;
 
         &::before, &::after { 
             content: "";
             position: absolute;
             left: 50%;
-            width: 88%; // Adjust this value to make the border longer
+            width: 88%;
             height: .0625rem;
             background-color: $mercury;
-            transform: translateX(-50%); // Centre the border horizontally 
+            transform: translateX(-50%);
         }
             &::before {
-                top: 0; // Position at the top
+                top: 0;
             }
-
             &::after {
-                bottom: 0; // Position at the bottom
+                bottom: 0;
             }
     }
     &__img{
@@ -421,7 +393,7 @@
     }
     &__content{
         @include body;
-        margin: 10px 30px 20px 100px;
+        margin: .625rem 1.875rem 1.25rem 6.25rem;
         word-wrap: break-word;
         overflow-wrap: break-word;
     }
@@ -434,31 +406,13 @@
     }
     @include tablet{
         &__item{
-            position: relative;
-            display: flex;
-            flex-direction: column;
-
             &::before, &::after { 
-                content: "";
-                position: absolute;
-                left: 50%;
                 width: 84%; 
-                height: .0625rem;
-                background-color: $mercury;
-                transform: translateX(-50%);  
-            }
-            &::before {
-                top: 0; 
-            }
-
-            &::after {
-                bottom: 0; 
             }
         }
         &__img{
             width: 3.75rem;
             height: 3.75rem;
-            border-radius: 50%;
             margin: 1.25rem 2rem -3.75rem 6rem;
         }
         &__name{
@@ -471,38 +425,22 @@
             margin: .625rem 3.5rem 1.875rem 10.625rem;
         }
         &__timestamp{
-
             margin-right: 5rem;
         }
     }
     @include desktop{
-        margin-bottom: 30px;
-        &__item{
-            position: relative;
-            display: flex;
-            flex-direction: column;
+        margin-bottom: 1.875rem;
 
+        &__item{
             &::before, &::after { 
-                content: "";
-                position: absolute;
                 left: 47%;
                 width: 38%; 
                 height: .0625rem;
-                background-color: $mercury;
-                transform: translateX(-50%);  
-            }
-            &::before {
-                top: 0; 
-            }
-
-            &::after {
-                bottom: 0; 
             }
         }
         &__img{
             width: 3.75rem;
             height: 3.75rem;
-            border-radius: 50%;
             margin: 1.25rem .625rem -3.75rem 24rem;
         }
         &__name{
@@ -511,8 +449,7 @@
     
         }
         &__content{
-            @include body;
-            margin: 10px 460px 20px 465px;
+            margin: .625rem 28.75rem 1.25rem 29.0625rem;
         }
         &__timestamp{
             margin-right: 29.5rem;
