--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1139,7 +1139,7 @@ body {
   }
   .comments__btn {
     width: 20%;
-    margin: 0 0 1.25rem 35rem;
+    margin: 0 0 1.25rem 33rem;
     font-size: 0.8125rem;
     line-height: 1.125rem;
     font-weight: 400;
@@ -1241,7 +1241,6 @@ body {
   position: relative;
   display: flex;
   flex-direction: column;
-  margin: 0 1.25rem;
 }
 .comment-list__item::before, .comment-list__item::after {
   content: "";
@@ -1329,6 +1328,9 @@ body {
   }
 }
 @media (min-width: 768px) {
+  .comment-list__item {
+    margin: 0 4rem 0 0;
+  }
   .comment-list__item::before, .comment-list__item::after {
     width: 84%;
   }
@@ -1419,7 +1421,7 @@ body {
 }
 @media (min-width: 1280px) {
   .comment-list__content {
-    margin: 0.625rem 28.75rem 1.25rem 29.0625rem;
+    margin: 0.625rem 26rem 1.25rem 29.0625rem;
   }
   .comment-list__timestamp {
     margin-right: 29.5rem;
